--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/blacksquare.png" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="description"
+      content="Victor Verheyden is a talented photographer from Antwerp, Belgium, known for capturing emotion and poetic moments through his unique style. His work spans landscapes, portraits, and still lifes, always approached with creativity and a deep curiosity about the world."
+    />
+
+    <meta
+      name="keywords"
+      content="Victor Verheyden, photographer, Antwerp, Igor Dieryck"
+    />
+
+    <meta name="author" content="Daye Sow" />
+    <meta property="og:title" content="Victor Verheyden | Photographer" />
+    <meta
+      property="og:description"
+      content="Victor Verheyden is a talented photographer from Antwerp, Belgium, known for capturing emotion and poetic moments through his unique style. His work spans landscapes, portraits, and still lifes, always approached with creativity and a deep curiosity about the world."
+    />
+    <meta property="og:image" content="//assets/limbalogo2.png" />
+
+    <meta property="og:type" content="website" />
+    <title>Victor Verheyden</title>
   </head>
   <body>
     <div id="root"></div>
