--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
     />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+
     <meta
       name="description"
       content="Victor Verheyden is a talented photographer from Antwerp, Belgium, known for capturing emotion and poetic moments through his unique style. His work spans landscapes, portraits, and still lifes, always approached with creativity and a deep curiosity about the world."
