--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       property="og:description"
       content="Victor Verheyden is a talented photographer from Antwerp, Belgium, known for capturing emotion and poetic moments through his unique style. His work spans landscapes, portraits, and still lifes, always approached with creativity and a deep curiosity about the world."
     />
-    <meta property="og:image" content="//assets/limbalogo2.png" />
+    <meta property="og:image" content="/NewInfo.jpeg" />
 
     <meta property="og:type" content="website" />
     <title>Victor Verheyden</title>
@@ -37,5 +37,19 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Victor Verheyden",
+        "description": "A talented photographer from Antwerp, Belgium, known for capturing emotion and poetic moments through his unique style.",
+        "image": "https://www.victorverheyden.com/NewInfo.jpeg",
+        "url": "https://www.victorverheyden.com",
+        "sameAs": [
+          "https://www.instagram.com/victorverheyden",
+          "https://www.linkedin.com/in/victorverheyden"
+        ]
+      }
+    </script>
   </body>
 </html>
